--- a/styles/blah.css
+++ b/styles/blah.css
@@ -1,1 +1,24 @@
-
+.profile{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: block;
+    margin-top: 10px;
+}
+.greeting{
+    display: flex;
+}
+.profile-container{
+    display: flex;
+    justify-content:flex-end;
+    flex-basis: 75%;
+}
+.nav-img{
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin: auto;
+}
+.me-2{
+    margin-right: 20px;
+}
