--- a/styles/blah.css
+++ b/styles/blah.css
@@ -64,3 +64,16 @@
   .card-text {
     font-size: 85%;
   }
+  .login-background {
+      background: linear-gradient(to bottom right, #7FFFD4, #AFEEEE, #40E0D0, cyan);
+      background-size: cover;
+  }
+  #title-name {
+      text-align: center;
+      margin-top: 20%;
+      margin-bottom: 20%;
+  }
+  .container > div {
+      /* margin-bottom: 2%; fullscreen webpage */
+      margin-bottom: 100%;
+  }
