--- a/styles/blah.css
+++ b/styles/blah.css
@@ -83,3 +83,18 @@
     .container > h1 {
         background-color: white;
     }
+    .map {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border-radius: 1%;
+        border-style: solid;
+        border-color: black;
+        border-width: 1px;
+        width: 100%;
+        height: auto;
+    }
+    .restaurant-names {
+        background-color: white;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
