--- a/styles/blah.css
+++ b/styles/blah.css
@@ -4,6 +4,8 @@
     height: 80px;
     display: block;
     margin-top: 10px;
+    border-style: solid;
+    border-color: white;
 }
 
 .greeting {
@@ -69,8 +71,9 @@
     .center {
         margin-left: auto;
         margin-right: auto;
-        background-color: lightblue;
+        background-color: white;
         width: 75%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     }
     .restaurant-names {
         background-color: white;
@@ -78,7 +81,8 @@
         margin-bottom: 20px;
     }
 .app-name {
-    background-color: turquoise;
+    background-color: #fa8e00;
+    color: white;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -89,7 +93,7 @@
     padding: 10px 0 10px 0;
 }
 .skeleton {
-    background-color: turquoise;
+    background-color: #f79d65;
     color: white;
     display: inline-block;
     margin-left: auto;
@@ -124,3 +128,13 @@ body {
     width: 200px;
 
 }
+.centered {
+    font-size: 2em;
+    font-weight: bold;
+    text-shadow: 3px 3px 4px white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
