--- a/styles/blah.css
+++ b/styles/blah.css
@@ -143,3 +143,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  #restaurant-catagories {
+    float: right;
+    margin-top: 35px;
+  }
